apps/unifi/unifi-db/unifi-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: unifi-db
  namespace: unifi
  labels:
    app: unifi-db
spec:
  selector:
    app: unifi-db
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
    name: mongodb
  type: ClusterIP
  clusterIP: None
