apps/unifi/unifi-db/unifi-db-network.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: unifi-db
  namespace: unifi
spec:
  endpointSelector:
    matchLabels:
      app: unifi-db
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: unifi
      toPorts:
        - ports:
            - port: "27017"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
